# sigeval

./: .gitignore  LICENSE  NARRATIVE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
content/: how-many-samples-llm-eval.md  launch-blog.md  llm-eval-regression-testing-ci.md
docs/: index.html  robots.txt
examples/: test_llm_eval_example.py
sigeval/: __init__.py  budget.py  core.py  judge.py  pytest_plugin.py  stats.py
tests/: test_sigeval.py
